--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "express-http-proxy": "^1.2.0",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
-    "node-sass-middleware": "0.11.0",
     "pg": "^7.4.3",
     "pg-hstore": "^2.3.2",
     "pug": "2.0.0-beta11",
