--- a/.sequelizerc
+++ b/.sequelizerc
@@ -2,6 +2,7 @@ var path = require('path')
 
 module.exports = {
   'config':          path.resolve(__dirname, 'config', 'database.json'),
+  'models-path':     path.resolve(__dirname, 'src', 'models'),
   'migrations-path': path.resolve(__dirname, 'db', 'migrations'),
   'seeders-path':    path.resolve(__dirname, 'db', 'seeders')
 }
