fixing no-console

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,6 @@
       ["error", "unix"],
     "no-unused-vars":
       ["error", {"argsIgnorePattern": "^_"}],
-    "no-nonsole": "off"
+    "no-console": "off"
   }
 }
