--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "eslint": "^5.6.1",
     "express": "~4.16.0",
     "express-http-proxy": "^1.2.0",
     "http-errors": "~1.6.2",
